fixed close button being overlapped by checkbox in Settings
set up as much I could to get the bold_hover ready for back-end.

--- a/src/Sidebar/Settings/Settings.css
+++ b/src/Sidebar/Settings/Settings.css
@@ -71,6 +71,9 @@
 #myBtn{
   margin: 30px 0px;
 }
+/* #myBtn:hover{
+  font-weight: bold;
+} */
 
 /* Customize the label (the container) */
 .container{       
@@ -139,6 +142,17 @@
   transform: rotate(45deg);
 }
 
+/* Bolds task when hovering over them */
 .task-item:hover{
   font-weight: bold;
 }
+
+/* allows bold hover when checkbox is checked */
+/* .container input:checked ~ .checkmark + .task-item:hover {
+  font-weight: bold;
+} */
+
+/* allows bold hover when checkbox is NOT checked */
+/* .container input:not(:checked) ~ .checkmark + .task-item {
+  font-weight: bold;
+} */
